added in-memory user database and implement authentication with flask-jwt

--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -37,7 +37,7 @@
   }
 
   createItem.onclick = function() {
-    request.post('/item/Jacob')
+    request.post('/item/Jacob', {price: 400})
       .then(res => {
         console.log(res);
         
